added target="_blank" to social links

--- a/src/index.html
+++ b/src/index.html
@@ -670,7 +670,11 @@
             </ul>
           </nav>
           <div class="footer__socials socials-footer">
-            <a href="https://www.facebook.com" class="socials-footer__link">
+            <a 
+              href="https://www.facebook.com" 
+              target="_blank"
+              class="socials-footer__link"
+            >
               <picture>
                 <source
                   srcset="./images/footer/social/01-768.svg"
@@ -683,7 +687,10 @@
                 >
               </picture>
             </a>
-            <a href="https://twitter.com/" class="socials-footer__link">
+            <a 
+              href="https://twitter.com/"
+              target="_blank"
+              class="socials-footer__link">
               <picture>
                 <source
                   srcset="./images/footer/social/02-768.svg"
@@ -696,7 +703,10 @@
                 >
               </picture>
             </a>
-            <a href="https://www.youtube.com" class="socials-footer__link">
+            <a 
+              href="https://www.youtube.com" 
+              target="_blank"
+              class="socials-footer__link">
               <picture>
                 <source
                   srcset="./images/footer/social/03-768.svg"
@@ -709,7 +719,10 @@
                 >
               </picture>
             </a>
-            <a href="https://www.reddit.com/" class="socials-footer__link">
+            <a 
+              href="https://www.reddit.com/" 
+              target="_blank"
+              class="socials-footer__link">
               <picture>
                 <source
                   srcset="./images/footer/social/04-768.svg"
