added functionality to tech-features section

--- a/src/index.html
+++ b/src/index.html
@@ -436,6 +436,9 @@
                 >
               </picture>
               <div class="features__decorations">
+                <div class="features__decoration-opened features__decoration-opened--1"></div>
+                <div class="features__decoration-opened features__decoration-opened--2"></div>
+                <div class="features__decoration-opened features__decoration-opened--3"></div>
                 <picture>
                   <source
                     srcset="./images/features/decorations/decoration-320.svg"
@@ -445,7 +448,7 @@
                     srcset="./images/features/decorations/decoration-768.svg"
                     media="(max-width: 1100px)"
                   >
-                  <img 
+                  <img
                     src="./images/features/decorations/01.svg" 
                     alt="Decoration 1"
                     class="features__decoration features__decoration--1"
