added functionality to language-switcher

--- a/src/index.html
+++ b/src/index.html
@@ -33,7 +33,16 @@
                   >
                 </picture>
               </a>
-              <div class="header__lang-switch">En</div>
+              <div class="header__lang-switch switch-language">
+                <span class="switch-language__selected" id="language-switch-button">En</span>
+                <ul class="switch-language__avalibe-list">
+                  <li class="switch-language__avalibe-item">Ar</li>
+                  <li class="switch-language__avalibe-item">De</li>
+                  <li class="switch-language__avalibe-item">Fr</li>
+                  <li class="switch-language__avalibe-item">Ru</li>
+                  <li class="switch-language__avalibe-item">Ua</li>
+                </ul>
+              </div>
             </div>
             <nav class="header__nav">
               <ul class="header__list list-header">
