added link to "help" in header

--- a/src/index.html
+++ b/src/index.html
@@ -132,7 +132,7 @@
           <div class="header__bottom">
             <div class="header__faq-and-help">
               <a href="#" class="header__faq">FAQ</a>
-              <a href="#" class="header__help">Help</a>
+              <a href="#get-in-touch" class="header__help">Help</a>
             </div>
             <a 
               href="#tech-features"
@@ -755,6 +755,20 @@
           </div>
         </div>
       </footer>
+    </div>
+    <div class="header-video-popup">
+      <div class="header-video-popup__video">
+        <iframe 
+          width="560" 
+          height="315" 
+          src="https://www.youtube.com/embed/SvTbB19bvIw" 
+          title="YouTube video player" 
+          frameborder="0" 
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+          allowfullscreen
+        >
+        </iframe>
+      </div>
     </div>
     <script src="index.js" defer></script>
   </body>
