added video popup to header play button

--- a/src/index.html
+++ b/src/index.html
@@ -119,7 +119,7 @@
                 and unlock infinite motion in any games on any platforms!
               </p>
               <div class="header__cost">1200$</div>
-              <button class="header__play-button play-button">
+              <button class="header__play-button play-button" id="header-video-play-button">
                 <img 
                   class="play-button__image" 
                   src="./images/header/play-button.svg" 
@@ -756,8 +756,9 @@
         </div>
       </footer>
     </div>
-    <div class="header-video-popup">
+    <div class="header-video-popup" id="header-video-popup">
       <div class="header-video-popup__video">
+        <div class="header-video-popup__close-button" id="header-video-popup-close-button"></div>
         <iframe 
           width="560" 
           height="315" 
