added menu-burger on targer button in header

--- a/src/index.html
+++ b/src/index.html
@@ -44,7 +44,7 @@
                 </ul>
               </div>
             </div>
-            <nav class="header__nav">
+            <nav class="header__nav" id="menu-burger">
               <ul class="header__list list-header">
                 <li class="list-header__item">
                   <a href="#about-us" class="list-header__link">
@@ -769,6 +769,35 @@
           allowfullscreen
         >
         </iframe>
+      </div>
+    </div>
+    <div class="header-menu" id="header-menu">
+      <div class="header-menu__wrapper">
+        <nav class="header-menu__navigation">
+          <ul class="header-menu__list header-menu-list">
+            <li class="header-menu-list__item">
+              <a href="#about-us" class="header-menu-list__link">About</a>
+            </li>
+            <li class="header-menu-list__item">
+              <a href="#tech-features" class="header-menu-list__link">Tech</a>
+            </li>
+            <li class="header-menu-list__item">
+              <a href="#benefits" class="header-menu-list__link">Benefits</a>
+            </li>
+            <li class="header-menu-list__item">
+              <a href="#get-in-touch" class="header-menu-list__link">Contact</a>
+            </li>
+            <li class="header-menu-list__item">
+              <button class="header-menu-list__button">Language</button>
+            </li>
+            <li class="header-menu-list__item">
+              <a href="#" class="header-menu-list__link">FAQ</a>
+            </li>
+            <li class="header-menu-list__item">
+              <a href="#get-in-touch" class="header-menu-list__link">Help</a>
+            </li>
+          </ul>
+        </nav>
       </div>
     </div>
     <script src="index.js" defer></script>
