--- a/src/index.html
+++ b/src/index.html
@@ -760,14 +760,15 @@
       <div class="header-video-popup__video">
         <div class="header-video-popup__close-button" id="header-video-popup-close-button"></div>
         <iframe 
+          id="popup-video-iframe"
           width="560" 
           height="315" 
-          src="https://www.youtube.com/embed/SvTbB19bvIw" 
+          src="https://www.youtube.com/embed/SvTbB19bvIw?enablejsapi=1" 
           title="YouTube video player" 
           frameborder="0" 
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
           allowfullscreen
-        >
+>
         </iframe>
       </div>
     </div>
