mobile language menu added

--- a/src/index.html
+++ b/src/index.html
@@ -801,6 +801,22 @@
         </nav>
       </div>
     </div>
+    <div class="header-language-menu" id="header-language-menu-mobile">
+      <div class="header-language-menu__wrapper">
+        <ul class="header-language-menu__list list-header-language-menu">
+          <li class="list-header-language-menu__item">English</li>
+          <li class="list-header-language-menu__item">Arabic</li>
+          <li class="list-header-language-menu__item">Chinese (Simplified)</li>
+          <li class="list-header-language-menu__item">Chinese (Traditional)</li>
+          <li class="list-header-language-menu__item">French</li>
+          <li class="list-header-language-menu__item">German</li>
+          <li class="list-header-language-menu__item">Italian</li>
+          <li class="list-header-language-menu__item">Polish</li>
+          <li class="list-header-language-menu__item">Russian</li>
+          <li class="list-header-language-menu__item">Ukrainian</li>
+        </ul>
+      </div>
+    </div>
     <script src="index.js" defer></script>
   </body>
 </html>
