--- a/src/index.html
+++ b/src/index.html
@@ -242,41 +242,41 @@
                     <img 
                       src="./images/aboutus/video-1920.png" 
                       alt="Video about us" 
-                      class="top-aboutus__video top-aboutus__video--1"
+                      class="top-aboutus__video top-aboutus__video--not-swipe-slider top-aboutus__video--1"
                     >
                   </picture>
                   <picture>
                     <source 
-                      srcset="./images/aboutus/video-320.png" 
+                      srcset="./images/aboutus/video-320-2.png" 
                       type="image/png" 
                       media="(max-width: 600px)"
                     >
                     <source 
-                      srcset="./images/aboutus/video-768.png" 
+                      srcset="./images/aboutus/video-768-2.png" 
                       type="image/png" 
                       media="(max-width: 1000px)"
                     >
                     <img 
-                      src="./images/aboutus/video-1920.png" 
+                      src="./images/aboutus/video-1920-2.png" 
                       alt="Video about us" 
-                      class="top-aboutus__video top-aboutus__video--2"
+                      class="top-aboutus__video top-aboutus__video--not-swipe-slider top-aboutus__video--2"
                     >
                   </picture>
                   <picture>
                     <source 
-                      srcset="./images/aboutus/video-320.png" 
+                      srcset="./images/aboutus/video-320-3.png" 
                       type="image/png" 
                       media="(max-width: 600px)"
                     >
                     <source 
-                      srcset="./images/aboutus/video-768.png" 
+                      srcset="./images/aboutus/video-768-3.png" 
                       type="image/png" 
                       media="(max-width: 1000px)"
                     >
                     <img 
-                      src="./images/aboutus/video-1920.png" 
+                      src="./images/aboutus/video-1920-3.png" 
                       alt="Video about us" 
-                      class="top-aboutus__video top-aboutus__video--3"
+                      class="top-aboutus__video top-aboutus__video--not-swipe-slider top-aboutus__video--3"
                     >
                   </picture>
                 </div>
@@ -288,8 +288,6 @@
                 </div>
                 <div class="top-aboutus__dotted-slider top-aboutus-dotted-slider">
                   <div class="top-aboutus-dotted-slider__dot top-aboutus-dotted-slider__dot--active"></div>
-                  <div class="top-aboutus-dotted-slider__dot"></div>
-                  <div class="top-aboutus-dotted-slider__dot"></div>
                   <div class="top-aboutus-dotted-slider__dot"></div>
                   <div class="top-aboutus-dotted-slider__dot"></div>
                 </div>
@@ -312,7 +310,7 @@
                 </div>
               </div>
             </div>
-            <div class="aboutus__top top-aboutus top-aboutus--600">
+            <div class="aboutus__top top-aboutus top-aboutus--690">
               <div class="top-aboutus__play-button play-button">
                 <img 
                   class="play-button__image"
@@ -329,7 +327,7 @@
               </p>
               <div class="top-aboutus__video-box">
                 <div class="top-aboutus__series-count">1/3</div>
-                <div class="top-aboutus__videos">
+                <div class="top-aboutus__videos top-aboutus--690__videos">
                   <picture>
                     <source 
                       srcset="./images/aboutus/video-320.png" 
@@ -349,51 +347,43 @@
                   </picture>
                   <picture>
                     <source 
-                      srcset="./images/aboutus/video-320.png" 
+                      srcset="./images/aboutus/video-320-2.png" 
                       type="image/png" 
                       media="(max-width: 600px)"
                     >
                     <source 
-                      srcset="./images/aboutus/video-768.png" 
+                      srcset="./images/aboutus/video-768-2.png" 
                       type="image/png" 
                       media="(max-width: 1000px)"
                     >
                     <img 
-                      src="./images/aboutus/video-1920.png" 
+                      src="./images/aboutus/video-1920-2.png" 
                       alt="Video about us" 
                       class="top-aboutus__video top-aboutus__video--2"
                     >
                   </picture>
                   <picture>
                     <source 
-                      srcset="./images/aboutus/video-320.png" 
+                      srcset="./images/aboutus/video-320-3.png" 
                       type="image/png" 
                       media="(max-width: 600px)"
                     >
                     <source 
-                      srcset="./images/aboutus/video-768.png" 
+                      srcset="./images/aboutus/video-768-3.png" 
                       type="image/png" 
                       media="(max-width: 1000px)"
                     >
                     <img 
-                      src="./images/aboutus/video-1920.png" 
+                      src="./images/aboutus/video-1920-3.png" 
                       alt="Video about us" 
                       class="top-aboutus__video top-aboutus__video--3"
                     >
                   </picture>
                 </div>
-                <div class="top-aboutus__slider top-aboutus-slider">
-                  <div class="top-aboutus-slider__previous">Previous</div>
-                  <div class="top-aboutus-slider__next">Next</div>
-                  <div class="top-aboutus-slider__border-grey"></div>
-                  <div class="top-aboutus-slider__border-blue"></div>
-                </div>
                 <div class="top-aboutus__dotted-slider top-aboutus-dotted-slider">
-                  <div class="top-aboutus-dotted-slider__dot top-aboutus-dotted-slider__dot--active"></div>
-                  <div class="top-aboutus-dotted-slider__dot"></div>
-                  <div class="top-aboutus-dotted-slider__dot"></div>
-                  <div class="top-aboutus-dotted-slider__dot"></div>
-                  <div class="top-aboutus-dotted-slider__dot"></div>
+                  <div class="top-aboutus-dotted-slider__dot top-aboutus-dotted-slider__dot--690 top-aboutus-dotted-slider__dot--active"></div>
+                  <div class="top-aboutus-dotted-slider__dot top-aboutus-dotted-slider__dot--690"></div>
+                  <div class="top-aboutus-dotted-slider__dot top-aboutus-dotted-slider__dot--690"></div>
                 </div>
               </div>
               <h2 class="top-aboutus__title section-title">ABOUT <span>PRODUCT</span></h2>
