added video popup to aboutus section

--- a/src/index.html
+++ b/src/index.html
@@ -306,7 +306,7 @@
                     src="./images/header/play-button.svg" 
                     alt="Play button image"
                   >
-                  <div class="play-button__text">Play Video</div>
+                  <div class="play-button__text" id="aboutus-video-play-button">Play Video</div>
                 </div>
               </div>
             </div>
@@ -758,8 +758,23 @@
           frameborder="0" 
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
           allowfullscreen
->
+        >
         </iframe>
+      </div>
+    </div>
+    <div class="aboutus-video-popup" id="aboutus-video-popup">
+      <div class="aboutus-video-popup__video">
+        <div class="aboutus-video-popup__close-button" id="aboutus-video-popup-close-button"></div>
+        <iframe 
+          id="popup-aboutus-video-iframe" 
+          width="560" 
+          height="315" 
+          src="https://www.youtube.com/embed/unSm97m2FdM?enablejsapi=1" 
+          title="YouTube video player" 
+          frameborder="0" 
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+          allowfullscreen
+        ></iframe>
       </div>
     </div>
     <div class="header-menu" id="header-menu">
