fixed some small bugs

--- a/src/index.html
+++ b/src/index.html
@@ -311,7 +311,7 @@
               </div>
             </div>
             <div class="aboutus__top top-aboutus top-aboutus--690">
-              <div class="top-aboutus__play-button play-button">
+              <div class="top-aboutus__play-button play-button" id="aboutus-video-play-button-690">
                 <img 
                   class="play-button__image"
                   src="./images/header/play-button.svg" 
