fixed slider on resize and more small things

--- a/src/index.html
+++ b/src/index.html
@@ -131,7 +131,7 @@
           </div>
           <div class="header__bottom">
             <div class="header__faq-and-help">
-              <a href="#" class="header__faq">FAQ</a>
+              <a href="#benefits" class="header__faq">FAQ</a>
               <a href="#get-in-touch" class="header__help">Help</a>
             </div>
             <a 
@@ -300,13 +300,13 @@
                   allowing you to freely walk, run,
                   and carry out just any other movement in virtual reality.
                 </p>
-                <div class="top-aboutus__play-button play-button">
+                <div class="top-aboutus__play-button play-button" id="aboutus-video-play-button">
                   <img 
                     class="play-button__image"
                     src="./images/header/play-button.svg" 
                     alt="Play button image"
                   >
-                  <div class="play-button__text" id="aboutus-video-play-button">Play Video</div>
+                  <div class="play-button__text">Play Video</div>
                 </div>
               </div>
             </div>
@@ -797,7 +797,7 @@
               <button class="header-menu-list__button">Language</button>
             </li>
             <li class="header-menu-list__item">
-              <a href="#" class="header-menu-list__link">FAQ</a>
+              <a href="#benefits" class="header-menu-list__link">FAQ</a>
             </li>
             <li class="header-menu-list__item">
               <a href="#get-in-touch" class="header-menu-list__link">Help</a>
