--- a/src/index.html
+++ b/src/index.html
@@ -492,6 +492,29 @@
                   >
                 </picture>
               </div>
+              <div class="features__hovers">
+                <div 
+                  class="features__hover hover-feature hover-feature--1"
+                  onmouseover="featuresHoverEffect(this)"
+                  onmouseout="featuresHoverEffect(this)"
+                ></div>
+                <div 
+                  class="features__hover hover-feature hover-feature--2"
+                  onmouseover="featuresHoverEffect(this)"
+                  onmouseout="featuresHoverEffect(this)"
+                ></div>
+                <div 
+                  class="features__hover hover-feature hover-feature--3"
+                  onmouseover="featuresHoverEffect(this)"
+                  onmouseout="featuresHoverEffect(this)"
+                ></div>
+                <script>
+                  function featuresHoverEffect(element) {
+                    const listFeature = document.querySelector(`.list-features--${element.classList[2].match(/\d/g)}`);
+                    listFeature.classList.toggle('list-features--hovered');
+                  }
+                </script>
+              </div>
               <div class="features__specs">
                 <ul class="features__list list-features list-features--1">
                   <h3 class="list-features__title">SENSOR</h3>
