--- a/src/index.html
+++ b/src/index.html
@@ -500,25 +500,43 @@
                 <div class="features__hovers">
                   <div 
                     class="features__hover hover-feature hover-feature--1"
-                    onmouseover="featuresHoverEffect(this)"
-                    onmouseout="featuresHoverEffect(this)"
+                    onmouseover="function hoverEffect(element) {
+                      const listFeature = document.querySelector('.list-features--' + element.classList[2].match(/\d/g));
+                      listFeature.classList.toggle('list-features--hovered');
+                    };
+                    hoverEffect(this)"
+                    onmouseout="function hoverEffect(element) {
+                      const listFeature = document.querySelector('.list-features--' + element.classList[2].match(/\d/g));
+                      listFeature.classList.toggle('list-features--hovered');
+                    };
+                    hoverEffect(this)"
                   ></div>
                   <div 
                     class="features__hover hover-feature hover-feature--2"
-                    onmouseover="featuresHoverEffect(this)"
-                    onmouseout="featuresHoverEffect(this)"
+                    onmouseover="function hoverEffect(element) {
+                      const listFeature = document.querySelector('.list-features--' + element.classList[2].match(/\d/g));
+                      listFeature.classList.toggle('list-features--hovered');
+                    };
+                    hoverEffect(this)"
+                    onmouseout="function hoverEffect(element) {
+                      const listFeature = document.querySelector('.list-features--' + element.classList[2].match(/\d/g));
+                      listFeature.classList.toggle('list-features--hovered');
+                    };
+                    hoverEffect(this)"
                   ></div>
                   <div 
                     class="features__hover hover-feature hover-feature--3"
-                    onmouseover="featuresHoverEffect(this)"
-                    onmouseout="featuresHoverEffect(this)"
-                  ></div>
-                  <script>
-                    function featuresHoverEffect(element) {
-                      const listFeature = document.querySelector(`.list-features--${element.classList[2].match(/\d/g)}`);
+                    onmouseover="function hoverEffect(element) {
+                      const listFeature = document.querySelector('.list-features--' + element.classList[2].match(/\d/g));
                       listFeature.classList.toggle('list-features--hovered');
-                    }
-                  </script>
+                    };
+                    hoverEffect(this)"
+                    onmouseout="function hoverEffect(element) {
+                      const listFeature = document.querySelector('.list-features--' + element.classList[2].match(/\d/g));
+                      listFeature.classList.toggle('list-features--hovered');
+                    };
+                    hoverEffect(this)"
+                  ></div>
                 </div>
                 <div class="features__specs">
                   <ul class="features__list list-features list-features--1">
